Makefile need python3-config put in python3.x branch

--- a/fbpy/utils/Makefile
+++ b/fbpy/utils/Makefile
@@ -7,10 +7,10 @@ fbutils.o: fbutils.c fbutils.h font.h
 	gcc -g -O2 -fpic -c fbutils.c -lm -lpng -o fbutils.o
 
 fblib.o: fblib.c
-	gcc -g -O2 -fpic -c fblib.c -o fblib.o `python-config --cflags`
+	gcc -g -O2 -fpic -c fblib.c -o fblib.o `python3-config --cflags`
 
 fblib.so: fblib.o fbutils.o
-	gcc -shared -o fblib.so fbutils.o fblib.o `python-config --libs`
+	gcc -shared -o fblib.so fbutils.o fblib.o `python3-config --libs`
 
 clean:
 	rm fblib.so fblib.o fbutils.o fblib.c
